5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4145/executions/1585_1446.log
== TEST (2019-03-25 12:22:01) 
-- CODE:
lp = float(input("litros de poupa"))	
print(lp)
-- OUTPUT:
7.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:23:33) 
-- CODE:
lp = float(input("litros de poupa"))	
doacao = 2/3*lp
print(lp-doacao)
-- OUTPUT:
2.333333333333334
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:23:42) 
-- CODE:
lp = float(input("litros de poupa"))	
doacao = 2/3*lp
print(lp-doacao)
-- OUTPUT:
2.333333333333334
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:24:25) 
-- CODE:
lp = float(input("litros de poupa"))	
doacao = 2/3*lp
print(lp-doacao)

-- OUTPUT:
2.333333333333334
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:24:36) 
-- CODE:
lp = float(input("litros de poupa"))	
doacao = 2/3*lp
print(doacao)

-- OUTPUT:
4.666666666666666
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:25:42) 
-- CODE:
lp = float(input("litros de poupa"))	
doacao = (2/3*lp)
print(doacao)

-- OUTPUT:
4.666666666666666
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:26:53) 
-- CODE:
lp = float(input("litros de poupa"))	
doacao = (2/3*lp)
print(round(doacao,3)

-- ERROR:
File "XXXX", line 4
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:27:13) 
-- CODE:
lp = float(input("litros de poupa"))	
doacao = (2/3*lp)
print(round(doacao,3))

-- OUTPUT:
4.667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:27:52) 
-- CODE:
lp = float(input("litros de poupa"))	
doacao = (2/3*lp)
print(round(doacao,3))

-- OUTPUT:
4.667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:28:48) 
-- CODE:
lp = float(input("litros de poupa"))	
doacao = (2/3*lp)
pm = (lp-doacao)
print(round(pm,3))

-- OUTPUT:
2.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 12:28:59) 
-- CODE:
lp = float(input("litros de poupa"))	
doacao = (2/3*lp)
pm = (lp-doacao)
print(round(pm,3))

-- EXECUTION TIME:
0.137161
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
2.333
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
6.667
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
5.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
